--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -1,5 +1,5 @@
 name: Jekflix
-title: Jekflix | A blog theme for Jekyll
+title: Sangflix | 이상현의 포트폴리오
 description: Jekflix is a template for Jekyll inspired by Netflix and made by
   Thiago Rossener.
 tags:
