--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -1,4 +1,4 @@
-name: Jekflix
+name: Sangflix
 title: Sangflix | 이상현의 포트폴리오
 description: Jekflix is a template for Jekyll inspired by Netflix and made by
   Thiago Rossener.
