--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ menu:
     url: /contact
   - title: Feed
     url: /feed.xml
-email: youremail@test.com
+email: 2003lsh2003@naver.com
 # See: https://disqus.com/
 disqus_username: disqus_username
 # Contact Form Setting
