--- a/src/yml/site.yml
+++ b/src/yml/site.yml
@@ -1,5 +1,5 @@
-name: Jekflix
-title: Jekflix | A blog theme for Jekyll
+name: Sangflix
+title: Sangflix | 이상현의 포트폴리오
 description: Jekflix is a template for Jekyll inspired by Netflix and made by
   Thiago Rossener.
 tags:
@@ -18,7 +18,7 @@ menu:
     url: /contact
   - title: Feed
     url: /feed.xml
-email: youremail@test.com
+email: 2003lsh2003@naver.com
 # See: https://disqus.com/
 disqus_username: disqus_username
 # Contact Form Setting
