--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@ menu:
     url: /
   - title: About
     url: /about
+  - title: Work
+    url: /work  
   - title: Contact
     url: /contact
   - title: Feed
